Fixed navbar bug on iOS

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,6 @@
 @import "vendor/ratchet/sass/ratchet";
 
-.bar {
+.main-bar {
   position: relative;
 }
 
